--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -1,4 +1,4 @@
-name: Testing 🧪 and coverage report generation 📝
+name: Testing 🧪
 
 on:
   - push
@@ -11,18 +11,23 @@ jobs:
     name: Python Testing and Coverage
     runs-on: ubuntu-latest
     steps:
-      - name: Run Python Tests
-        uses: maekind/github-actions/.github/actions/python-testing-and-coverage@main
-        with:
-          python_version: ${{ matrix.python-version }}
-          coverage_path: "./src"
-
-  upload-coverage:
-    name: Upload Coverage to Codecov
-    needs: testing
-    runs-on: ubuntu-latest
-    steps:
-      - name: Upload Code Coverage
-        uses: maekind/github-actions/.github/actions/upload-codecov-coverage@main
-        with:
-          codecov_token: ${{ secrets.CODECOV_GH_PYTEST_PYLEMBIC }}
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}
+        shell: bash
+      - name: Install the project
+        run: uv sync --all-extras --dev
+        shell: bash
+      - name: Run linter
+        run: |
+          set -e
+          uv run ruff check
+        shell: bash
+      - name: Test with pytest
+        run: |
+          uv pip install -e .
+          uv run pytest tests -v || (test $? -eq 5 && exit 0)
+        shell: bash
