Add addopts option to pyproject.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,3 +50,4 @@ build-backend = "hatchling.build"
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_functions = "test_*"
+addopts = "--pylembic-verbose"
